# autora-theorist-teammate

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: Additional Example.ipynb  Basic Usage.ipynb  index.md  quickstart.md
src/autora/theorist/teammate/: __init__.py  caffeinate_teammate.py  candidate_functions.py  coffeinate_teammate.py  l0_layer.py  search_node.py
src/autora/theorist/teammate/hparams/: basic_training_hparams.json  bilevel_optimization_hparams.json  data.py
tests/: test_teammate.py
