[project]
# UPDATE THIS BEFORE PUBLISHING
name = "teammate"
description = "Hackathon and Course theorist by team Mate"
authors = [{ name = "Leon J.K. Schmid", email = "lschmid@uos.de" }]
dynamic = ["version"]

readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8,<4"

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "autora-core",
    "scikit-learn",
    "autora",
    "json",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]",
    "autora"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai"
repository = "https://github.com/LJKS/autora-theorist-teammate"
documentation = "https://autoresearch.github.io/autora/"


[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

